# didixbox-achievements

./: Dockerfile  README.md  pyproject.toml
didixbox_achievements/: __init__.py
infra/k8s/: depl.yaml
tests/: test_didixbox_achievements.py
